--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+coverage
 
 # Dependency directories
 node_modules/
 
 # TypeScript cache
 *.tsbuildinfo
+dist
