--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "A api with fastify and typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc -b && node dist/",
+    "test": "jest --collect-coverage"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^3.3.0",
+    "fastify": "^3.3.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.4",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
+    "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   }
 }
